# Azure-Kinect-DK-3D-reconstruction

./: .gitignore  README.md  associate.py
Acquiring/: AcquiringImages.cpp  AcquiringPointCloud.cpp  CMakeLists.txt  base.cpp  base.h
AcquiringImages/: AcquiringImages.cpp  CMakeLists.txt
AcquiringPointCloud/: AcquiringPointCloud.cpp  CMakeLists.txt  CMakeListstxt  demo-PointCloudFusion.cpp
open3d_reconstruction/: colored_icp.py  initialize_config.py  integrate_scene.py  make_fragments.py  optimize_posegraph.py  refine_registration.py  register_fragments.py  requirements-0.10.txt  requirements.txt  run_system.py  tintegrate_scene.py  visualization.py
open3d_reconstruction/arm/: install-deps.sh  install.sh
open3d_reconstruction/dataset/: NOTE
open3d_reconstruction/debug/: pairwise_pc_alignment.py  pairwise_rgbd_alignment.py  visualize_alignment.py  visualize_fragments.py  visualize_pointcloud.py
